<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movieList"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_menu_movieList" />
        <item
            android:id="@+id/nav_movieAPI"
            android:icon="@drawable/ic_review"
            android:title="@string/nav_menu_movieAPI" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_book"
            android:title="@string/nav_menu_reservation" />
    </group>

    <item android:title="@string/nav_menu_setting">
        <menu>
            <item
                android:id="@+id/nav_userSetting"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_menu_userSetting" />
        </menu>
    </item>

</menu>
