<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMovieTitle_CommentWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="@dimen/movieTitle"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivMovieRating_CommentWrite"
            android:layout_width="@dimen/movieRating"
            android:layout_height="@dimen/movieRating"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="@color/Gray" />

    <RatingBar
        android:id="@+id/commentRatingBar_CommentWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:stepSize="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/comment_write_enter_rating"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etComment_CommentWrite"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:background="@drawable/all_orange_rounded_border"
        android:gravity="top"
        android:hint="@string/comment_write_within_hundred_char"
        android:maxLength="100"
        android:padding="10dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave_CommentWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/all_purple_border_btn"
            android:paddingStart="35dp"
            android:paddingTop="15dp"
            android:paddingEnd="35dp"
            android:paddingBottom="15dp"
            android:text="@string/comment_write_save"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCancel_CommentWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/all_purple_border_btn"
            android:paddingStart="35dp"
            android:paddingTop="15dp"
            android:paddingEnd="35dp"
            android:paddingBottom="15dp"
            android:text="@string/comment_write_cancel"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>