<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svMainContainer_DetailView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/detail_view_upper_part_gradient"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivMoviePoster_DetailView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvMovieTitle_DetailView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/White"
                        android:textSize="@dimen/movieTitle"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ivMovieRating_DetailView"
                        android:layout_width="@dimen/movieRating"
                        android:layout_height="@dimen/movieRating" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvMovieRelease_DetailView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_view_release"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvMovieGenre_DetailView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="/"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvMovieShowTime_DetailView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnThumbUp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/detail_view_thumb_up_state" />

                    <TextView
                        android:id="@+id/tvThumbUpRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:text="0"
                        android:textColor="@color/White"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnThumbDown"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/detail_view_thumb_down_state" />

                    <TextView
                        android:id="@+id/tvThumbDownRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:text="0"
                        android:textColor="@color/White"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/White"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/detail_view_ticket_sales"
                    android:textColor="@color/DarkGray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvTicketRank_DetailView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/detail_view_ticket_rank"
                        android:textColor="@color/DarkGray" />

                    <TextView
                        android:id="@+id/tvTicketSalesPer_DetailView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_view_ticket_sales_per"
                        android:textColor="@color/DarkGray" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gray_stroke"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/detail_view_movie_credits"
                    android:textColor="@color/DarkGray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <RatingBar
                        android:id="@+id/rbMovieCredits_DetailView"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginEnd="10dp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="0.005" />

                    <TextView
                        android:id="@+id/tvMovieCredits_DetailView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/DarkGray" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/detail_view_total_attendance"
                    android:textColor="@color/DarkGray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvMovieTotalAttendance_DetailView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/detail_view_total_attendance_val"
                    android:textColor="@color/DarkGray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/White"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/detail_view_story_line"
                android:textColor="@color/Dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStoryLine_DetailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/DarkGray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/White"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/detail_view_director_actor"
                android:textColor="@color/Dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/detail_view_director"
                    android:textColor="@color/Dark" />

                <TextView
                    android:id="@+id/tvDirector_DetailView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkGray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/detail_view_actor"
                    android:textColor="@color/Dark" />

                <TextView
                    android:id="@+id/tvActor_DetailView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkGray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:background="@color/White">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_gallery"
                android:textColor="@color/Dark"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMoviePhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/White"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/all_comment"
                    android:textColor="@color/Dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_review_selected" />

                <TextView
                    android:id="@+id/btnWriteComment_DetailView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/all_write_comment"
                    android:textColor="@color/Orange"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/commentListView_Main"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scrollbars="none" />

            <Button
                android:id="@+id/btnAllComment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/all_purple_border_btn"
                android:text="@string/detail_view_all_comment"
                android:textColor="@color/Purple"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:background="@color/White"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_kakao" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/Orange"
                android:text="@string/detail_view_reservation"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>

